# parts_Trading_arbitrage_bot

./: CMakeLists.txt  Dockerfile  Makefile  README.md
local_settings/: config.json
src/: main.cpp
src/data/: data_box.h  local_config.h  log_creator_msg_queue.cpp  log_creator_msg_queue.h  market.cpp  market.h  stock_market.cpp  stock_market.h  stock_market_info.cpp  stock_market_info.h
src/data/types/: double.cpp  double.h  log_type.cpp  log_type.h  market_item.h  market_type.cpp  market_type.h  order.cpp  order.h  symbol_information.cpp  symbol_information.h  symbol_name.cpp  symbol_name.h  symbol_status.cpp  symbol_status.h  symbol_sub_status.h  trade_type.cpp  trade_type.h
src/functions/: aserco_api_functions.cpp  aserco_api_functions.h  binance_api_functions.cpp  binance_api_functions.h  binance_parse_functions.cpp  binance_parse_functions.h  parse_config_functions.cpp  parse_config_functions.h
src/helpers/: hmac_sha256.hpp  locker.h  math.cpp  math.h  non_copyable.h
src/threads/: config_thread.cpp  config_thread.h  http_client.h  my_thread.h  orderbook_thread.cpp  orderbook_thread.h
